--- a/style02.css
+++ b/style02.css
@@ -111,3 +111,22 @@ transition: .3s;
 .color{
     color:#0ef
 }
+img{
+    max-width: 100%;
+    height: auto;
+    border: 3px solid balck; 
+    box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.3);
+
+}
+.imgg{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    overflow: hidden;
+
+}
+.imgg img{
+    width: 100%;
+    height: auto;
+    display: block;
+}
